# qemu

./: MAINTAINERS  Makefile.objs  blockdev.c  hmp-commands.hx  memory.c  meson.build  qemu-options.hx  qtest.c  trace-events
default-configs/: arm-softmmu.mak
hw/: Kconfig  Makefile.objs  meson.build
hw/adc/: aspeed_adc.c  meson.build  trace-events
hw/arm/: Kconfig  Makefile.objs  aspeed.c  aspeed_ast2600.c  aspeed_soc.c  ast2400.c  ast2500-edk.c  ast2500.c  fby35.c  meson.build  palmetto-bmc.c  xilinx_zynq.c
hw/block/: m25p80.c  meson.build  trace-events
hw/core/: irq.c
hw/fsi/: Kconfig  Makefile.objs  aspeed-apb2opb.c  cfam.c  engine-scratchpad.c  fsi-master.c  fsi-slave.c  fsi.c  meson.build  opb.c  trace-events
hw/gpio/: Makefile.objs  aspeed_gpio.c  trace-events
hw/i2c/: aspeed_i2c.c
hw/intc/: aspeed_vic.c
hw/misc/: Kconfig  Makefile.objs  aspeed_ibt.c  aspeed_lpc.c  aspeed_pwm.c  aspeed_scu.c  aspeed_sdmc.c  fby35_sb_cpld.c  host_power.c  ibm-cffps.c  ir35221.c  meson.build  tmp421.c  trace-events
hw/net/: Makefile.objs  ftgmac100.c
hw/sd/: sd.c  sdmmc-internal.h
hw/ssi/: aspeed_smc.c  trace-events
hw/timer/: Makefile.objs  aspeed_timer.c  rx8900.c  trace-events
hw/watchdog/: wdt_aspeed.c
include/monitor/: hmp.h
include/net/: eth.h
include/sysemu/: blockdev.h
qapi/: string-output-visitor.c
qom/: qom-hmp-cmds.c
slirp/: ncsi-pkt.h  ncsi.c  slirp.c  slirp.h
softmmu/: memory.c
target-arm/: cpu.c  cpu.h  helper.c
tests/: Makefile.include  libqtest.c  libqtest.h  m25p80-test.c  rx8900-test.c
tests/avocado/: machine_aspeed.py  (+1 more)
(+30 files in other folders)
